# Salesforce-MCP

./: .bedrock_agentcore.yaml  .env.example  .env.local.example  .gitignore  Dockerfile  Makefile  README.md  build-lambda.sh  docker-compose.yml  pyproject.toml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/agentcore/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/foundation/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/monitoring/: main.tf  variables.tf
infra/terraform/modules/oauth_proxy/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
mcp_server/: server.py
mcp_server/config/: __init__.py  settings.py
mcp_server/oauth/: routes.py
mcp_server/salesforce/: __init__.py  auth.py  client.py
mcp_server/store/: __init__.py  opensearch.py
mcp_server/tools/: __init__.py  batch_lookup.py  describe_global.py  describe_sobject.py  echo.py  get_record.py  get_related_records.py  get_user_info.py  lookup.py  related_documents.py  search.py  soql_query.py  sosl_search.py
oauth_proxy/: .env.example  DEPLOY.md  __init__.py  build-lambda.sh
oauth_proxy/.build/: salesforce_oauth_proxy.py
oauth_proxy/.build/cffi-2.0.0.dist-info/: RECORD
oauth_proxy/.build/cryptography-46.0.5.dist-info/: RECORD
oauth_proxy/.build/httpx-0.28.1.dist-info/: RECORD
scripts/: init-index.py  local-dev.py  seed-data.py
tests/: conftest.py  test_deployed.py
tests/integration/: test_server.py
tests/unit/: test_auth.py  test_oauth_routes.py  test_server.py  test_store.py  test_tools.py
