[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-mcp-server"
version = "0.1.0"
description = "MCP server with OpenSearch retrieval, deployable to AgentCore"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # MCP server
    "mcp>=1.23.0",
    "uvicorn>=0.30.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # OpenSearch
    "opensearch-py>=2.4.0",

    # AWS (for SigV4 auth and Secrets Manager)
    "boto3>=1.34.0",
    "requests-aws4auth>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[tool.setuptools]
packages = ["mcp_server", "mcp_server.config", "mcp_server.tools", "mcp_server.store"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=mcp_server --cov-report=term-missing"
